# MinorTowns

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
GTests/: CMakeLists.txt  mock_manager_controller.h  test_game_map.cpp  test_params_validator.cpp  test_request_handler.cpp  test_user.cpp
src/: CMakeLists.txt  MinorTowns.cpp  MinorTowns.h  config.yml  server.yml
src/LogManager/: CMakeLists.txt  LogManager.cpp  LogManager.h  log.h
src/Server/: CMakeLists.txt  Server.cpp  Server.h  server.yml
src/Server/GameManager/: CMakeLists.txt  GameManager.cpp  GameManager.h
src/Server/GameManager/Game/: CMakeLists.txt  Game.h
src/Server/GameMinorTowns/: CMakeLists.txt  GameMinorTowns.cpp  GameMinorTowns.h
src/Server/GameMinorTowns/GameManager/: GameManager.cpp  GameManager.h
src/Server/GameMinorTowns/GameManager/Game/: CMakeLists.txt  Game.cpp  Game.h
src/Server/GameMinorTowns/GameManager/Game/Army/: Army.cpp
src/Server/GameMinorTowns/GameManager/Game/GameController/: GameController.cpp  GameController.h
src/Server/GameMinorTowns/GameManager/Game/GameMap/: CMakeLists.txt  GameMap.cpp  GameMap.h
src/Server/GameMinorTowns/GameManager/Game/GameSettings/: CMakeLists.txt  GameSettings.cpp  GameSettings.h  game.yml
src/Server/GameMinorTowns/GameManager/Game/Town/: CMakeLists.txt  Town.cpp  Town.h
src/Server/GameMinorTowns/GameManager/GameSettings/: GameSettings.h  game.yml
src/Server/GameMinorTowns/LobbyManager/: CMakeLists.txt  LobbyManager.cpp  LobbyManager.h
src/Server/GameMinorTowns/LobbyManager/Lobby/: Lobby.cpp  Lobby.h
src/Server/GameMinorTowns/LobbyManager/LobbyUpdateNotifier/: LobbyUpdateNotifier.cpp  LobbyUpdateNotifier.h
src/Server/GameMinorTowns/LobbyManager/util/: CMakeLists.txt
src/Server/LobbyManager/: CMakeLists.txt  LobbyManager.cpp  LobbyManager.h
src/Server/LobbyManager/Lobby/: CMakeLists.txt  Lobby.cpp  Lobby.h
src/Server/Middleware/: CMakeLists.txt  Middleware.cpp  Middleware.h
src/Server/Middleware/AuthorizatonValidate/: AuthorizationValidate.cpp  AuthorizationValidate.h
src/Server/RequestHandler/: Operations.h  ParamsValidator.cpp  ParamsValidator.h  RequestResult.h
src/Server/User/: CMakeLists.txt  User.cpp  User.h
src/Server/User/MessagePool/: MessagePool.cpp  MessagePool.h
src/Server/WebSocketServer/: CMakeLists.txt  WebSocketServer.cpp  WebSocketServer.h
src/Server/WebSocketServer/WebSocket/: CMakeLists.txt  ConnectionHandler.h  WebSocketRequestHandler.cpp  WebSocketRequestHandler.h  WebSocketRequestHandlerFactory.h
src/Server/WebSocketServer/WebSocket/BetterWebSocket/: BetterWebSocket.cpp  BetterWebSocket.h  CMakeLists.txt
src/Server/WebSocketServer/WebSocket/BetterWebSocket/ServerMessages/: PushMessage.h  ResponseMessage.h
src/Server/WebSocketServer/WebSocket/BetterWebSocket/server_messages/: http_status_codes.h  push_message.h  response_message.h
src/Server/request_handler/: error_info.h  operations.h  params.h  params_validator.cpp  params_validator.h  request_handler.cpp  request_handler.h  request_result.h
src/WebSocketServer/: CMakeLists.txt  WebSocketServer.cpp  WebSocketServer.h
src/WebSocketServer/GameMinorTowns/: CMakeLists.txt  GameMinorTowns.cpp  GameMinorTowns.h
src/WebSocketServer/GameMinorTowns/GameManager/: CMakeLists.txt  GameManager.cpp  GameManager.h
src/WebSocketServer/GameMinorTowns/GameManager/Game/: CMakeLists.txt  Game.cpp  Game.h
src/WebSocketServer/GameMinorTowns/GameManager/Game/ActionManager/: CMakeLists.txt
src/WebSocketServer/GameMinorTowns/GameManager/Game/Army/: Army.h  CMakeLists.txt
src/WebSocketServer/GameMinorTowns/GameManager/Game/GameController/: GameController.cpp  GameController.h  GameNotify.h
src/WebSocketServer/GameMinorTowns/GameManager/Game/GameMap/: GameMap.cpp  GameMap.h
src/WebSocketServer/GameMinorTowns/GameManager/Game/GameSettings/: GameSettings.h
src/WebSocketServer/GameMinorTowns/GameManager/Game/Town/: CMakeLists.txt  Town.cpp  Town.h
src/WebSocketServer/GameMinorTowns/GameManager/GameSettings/: GameSettings.cpp
src/WebSocketServer/GameMinorTowns/LobbyManager/: CMakeLists.txt  LobbyManager.cpp  LobbyManager.h
src/WebSocketServer/GameMinorTowns/LobbyManager/LobbyUpdateNotifier/: LobbyUpdateNotifier.cpp  LobbyUpdateNotifier.h
src/WebSocketServer/ManagerController/: CMakeLists.txt  IManagerController.h  ManagerController.cpp  ManagerController.h
src/WebSocketServer/ManagerController/GameManager/: GameManager.cpp  GameManager.h
src/WebSocketServer/ManagerController/GameManager/Game/: CMakeLists.txt  Game.cpp  Game.h
src/WebSocketServer/ManagerController/GameManager/Game/ActionManager/: ActionManager.cpp  ActionManager.h
src/WebSocketServer/ManagerController/GameManager/Game/Army/: Army.cpp  Army.h
src/WebSocketServer/ManagerController/GameManager/Game/GameController/: GameController.cpp  GameController.h
src/WebSocketServer/ManagerController/GameManager/Game/GameMap/: GameMap.cpp  GameMap.h
src/WebSocketServer/ManagerController/GameManager/Game/GameSettings/: CMakeLists.txt  GameSettings.cpp  GameSettings.h  game.yml
src/WebSocketServer/ManagerController/GameManager/Game/Town/: CMakeLists.txt  Town.cpp  Town.h
src/WebSocketServer/ManagerController/LobbyManager/: CMakeLists.txt  LobbyManager.h
src/WebSocketServer/ManagerController/LobbyManager/LobbyUpdateNotifier/: LobbyUpdateNotifier.h
src/WebSocketServer/Middleware/: CMakeLists.txt  Middleware.cpp  Middleware.h
src/WebSocketServer/Middleware/AuthorizationValidate/: AuthorizationValidate.cpp
src/WebSocketServer/Middleware/AuthorizatonValidate/: AuthorizationValidate.h
src/WebSocketServer/RequestHandler/: CMakeLists.txt  Operations.h  Params.h  ParamsValidator.cpp  ParamsValidator.h  RequestError.h  RequestHandler.cpp  RequestHandler.h  RequestResult.h
src/WebSocketServer/User/: CMakeLists.txt  User.cpp  User.h
src/WebSocketServer/WebSocketRequest/: CMakeLists.txt  WebSocketRequestHandler.cpp  WebSocketRequestHandler.h
src/WebSocketServer/WebSocketRequest/BetterWebSocket/: BetterWebSocket.h
src/util/: CMakeLists.txt  gen_uuid.cpp  gen_uuid.h
(+45 files in other folders)
